Grace/tests/gibbs/errors/t083.grace
// ERROR = P1026
1 + 2 < 3
